--- a/doc/hpc.bib
+++ b/doc/hpc.bib
@@ -67,3 +67,8 @@
   year={2011}
 }
 
+@misc{cuda_fortran_overlap,
+    title = {{CUDA Fortran Asynchronous Data Transfers}},
+    author = {Greg Ruetsch and Brent Leback},
+    howpublished = {\url{http://www.pgroup.com/lit/articles/insider/v3n1a4.htm}}
+}
