--- a/doc/misc.bib
+++ b/doc/misc.bib
@@ -105,6 +105,11 @@
   year={2013}
 }
 
-
+@book{hoare1985communicating,
+  title={Communicating sequential processes},
+  author={Hoare, CAR},
+  year={1985},
+  publisher={Prentice-Hall, Inc.}
+}
 
 
