--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -376,6 +376,12 @@ howpublished = {\url{http://on-demand.gputechconf.com/gtc/2013/presentations/S31
   publisher={BMJ}
 }
 
+@misc{geisa,
+  title={GEISA},
+  author={Uvhage, Daniel and Zazzi,Henric},
+  howpublished = {\url{https://github.com/menzzana/geisa}},
+  year={2014}
+}
 
 
 
