--- a/doc/hpc.bib
+++ b/doc/hpc.bib
@@ -72,3 +72,25 @@
     author = {Greg Ruetsch and Brent Leback},
     howpublished = {\url{http://www.pgroup.com/lit/articles/insider/v3n1a4.htm}}
 }
+
+@misc{intel_knights_corner,
+    title = {{Intel Xeon Phi Coprocessor DataSheet, Document ID 328209 003EN}},
+    author = {Intel},
+    year = {2014},
+    howpublished = {\url{http://www.intel.com/content/www/us/en/processors/xeon/xeon-phi-coprocessor-datasheet.html}}
+}
+
+@misc{nvidia_maxwell,
+    title = {{Maxwell: The Most Advanced CUDA GPU Ever Made}},
+    author = {{NVIDIA}, Mark Harris},
+    year = {2014},
+    howpublished = {\url{http://devblogs.nvidia.com/parallelforall/maxwell-most-advanced-cuda-gpu-ever-made/}}
+}
+
+@book{jeffers2013intel,
+  title={Intel Xeon Phi coprocessor high performance programming},
+  author={Jeffers, James and Reinders, James},
+  year={2013},
+  publisher={Newnes}
+}
+
