--- a/doc/misc.bib
+++ b/doc/misc.bib
@@ -112,4 +112,35 @@
   publisher={Prentice-Hall, Inc.}
 }
 
+@book{git_book,
+  title={Version Control with Git: Powerful tools and techniques for collaborative software development},
+  author={Loeliger, Jon and McCullough, Matthew},
+  year={2012},
+  publisher={"O'Reilly Media, Inc."}
+}
+
+@misc{intel_haswell_2014,
+  title={Intel Unleashes its First 8-Core Desktop Processor},
+  author={Intel},
+  howpublished = {\url{http://newsroom.intel.com/community/intel_newsroom/blog/2014/08/29/intel-unleashes-its-first-8-core-desktop-processor}},
+  year={2014}
+}
+
+@misc{intel_haswell_2014_5960x,
+  title={i7-5960x specification sheet},
+  author={Intel},
+  howpublished = {\url{http://ark.intel.com/products/82930}},
+  year={2014}
+}
+
+@misc{tomshardware_nehalem,
+  title={Intel Core i7 (Nehalem): Architecture By AMD?},
+  author={Fedy Abi-Chahla},
+  howpublished = {\url{http://www.tomshardware.com/reviews/Intel-i7-nehalem-cpu,2041-2.html}},
+  year={2008}
+}
+
+
+
+
 
